added option to control pytest params

--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,4 @@ deps =
 
 commands =
     python -m pylint friendlyshell
-    python -m pytest -vv --cov=friendlyshell --cov-report=html --cov-report=term tests
+    python -m pytest -vv --cov=friendlyshell --cov-report=html --cov-report=term {posargs} tests
