tweak to last commit

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist=py27,py3
 
 [testenv]
 skip_missing_interpreters = True
+sitepackages = False
+whitelist_externals =
+    pylint
+    pytest
 
 deps =
     pytest
@@ -12,5 +16,5 @@ deps =
     pytest-catchlog
 
 commands =
-    python -m pylint friendlyshell
+    pylint friendlyshell
     python -m pytest -vv --cov=friendlyshell --cov-report=html --cov-report=term {posargs} tests
