added readme and travisci config

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist=py27,py3
 [testenv]
 skip_missing_interpreters = True
 sitepackages = False
+passenv=TRAVIS_*
 whitelist_externals =
     pylint
     pytest
