--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 venv?
+.pytest_cache/
 # Created by .ignore support plugin (hsz.mobi)
 ### macOS template
 # General
@@ -29,6 +30,7 @@ Temporary Items
 .apdisk
 ### Python template
 # Byte-compiled / optimized / DLL files
+
 __pycache__/
 *.py[cod]
 *$py.class
