--- a/tox.ini
+++ b/tox.ini
@@ -5,17 +5,11 @@ envlist=py27,py3
 skip_missing_interpreters = True
 sitepackages = False
 passenv=TRAVIS_*
-whitelist_externals =
-    pylint
-    pytest
 
-deps =
-    pytest
-    pytest-cov
-    mock
-    pylint
-    pytest-catchlog
+deps = -rrequirements.txt
 
 commands =
-    pylint friendlyshell
-    python -m pytest -vv --cov=friendlyshell --cov-report=html --cov-report=term {posargs} tests
+    python -m pylint friendlyshell
+    python -m pylint setup.py
+    python -m pytest -vv --cov=friendlyshell --cov-report=html
+        --cov-report=term {posargs} tests
