fixed bug with last commit

--- a/tox.ini
+++ b/tox.ini
@@ -11,5 +11,5 @@ deps = -rrequirements.txt
 commands =
     python -m pylint friendlyshell
     python -m pylint setup.py
-    python -m pytest -vv --cov=friendlyshell --cov-report=html
+    python -m pytest -vv --cov=friendlyshell --cov-report=html \
         --cov-report=term {posargs} tests
