--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ passenv=TRAVIS_*
 deps = -rrequirements.txt
 
 commands =
-    python -m pylint friendlyshell
+    python -m pylint src
     python -m pylint setup.py
     python -m pytest -vv --cov=friendlyshell --cov-report=html \
         --cov-report=term {posargs} tests
