--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: false
 stages:
   - test
   - name: deploy
-    if: tag IS present
+    #if: tag IS present
 
 # Generate a matrix for all Python versions we support
 python:
