--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,17 @@ stages:
     if: tag IS present
 
 # Generate a matrix for all Python versions we support
-python:
-  - 2.7
-  - 3.4
-  - 3.5
-  - 3.6
-  - 3.7
-  - pypy
-  - pypy3
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+    - python: pypy
+    - python: pypy3
+      dist: xenial
+      sudo: true
 
 # Install all of our build-time dependencies
 install: pip install wheel twine tox coveralls
