fixup! fixup! Fixes #83 Added test coverage for the new Python 3.7 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-sudo: false
 
 # Make sure we run all 'test' stages before we deply
 # and ensure we only deploy from production branches / tags
@@ -11,15 +10,29 @@ stages:
 # Generate a matrix for all Python versions we support
 matrix:
   include:
-    - python: 2.7
-    - python: 3.4
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: pypy
-    - python: pypy3
-      dist: xenial
-      sudo: true
+    - name: "Python 2.7 tests"
+      python: 2.7
+      env: TOXENV=py27
+    - name: "Python 3.4 tests"
+      python: 3.4
+      env: TOXENV=py34
+    - name: "Python 3.5 tests"
+      python: 3.5
+      env: TOXENV=py35
+    - name: "Python 3.6 tests"
+      python: 3.6
+      env: TOXENV=py36
+#    - name: "Python 3.7 tests"
+#      python: 3.7
+#      env: TOXENV=py37
+    - name: "Python pypy 2 tests"
+      python: pypy
+      env: TOXENV=pypy
+    - name: "Python pypy 3 tests"
+      python: pypy3
+      env: TOXENV=pypy3
+#      dist: xenial
+#      sudo: true
 
 # Install all of our build-time dependencies
 install: pip install wheel twine tox coveralls
@@ -28,7 +41,6 @@ install: pip install wheel twine tox coveralls
 # one copy of this default job will be generated for each python
 # version stated above
 script:
-  - source ./travisenv.sh
   - tox
 
 # Default a secondary, custom job that only runs after the default 'test'
@@ -41,7 +53,7 @@ script:
 jobs:
   include:
     - stage: deploy
-      python: 3.7
+      python: 3.6
       script:
         - python setup.py bdist_wheel
         - twine upload dist/*.whl -u $DEPLOY_USER -p $DEPLOY_PASS
