--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,15 @@ matrix:
     - name: "Python 3.7 tests"
       python: 3.7
       env: TOXENV=py37
+      dist: xenial
+      sudo: true
     - name: "Python pypy 2 tests"
       python: pypy
       env: TOXENV=pypy
     - name: "Python pypy 3 tests"
       python: pypy3
       env: TOXENV=pypy3
-#      dist: xenial
-#      sudo: true
+
 
 # Install all of our build-time dependencies
 install: pip install wheel twine tox coveralls
