fixup! fixup! fixup! fixup! fixup! fixup! Fixes #83 Added test coverage for the new Python 3.7 version

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
-envlist=py27,py3,pypy,pypy3
+envlist=py2,py27,pypy,py3,py34,py35,py36,py37,pypy3
 
 [testenv]
 skip_missing_interpreters = True
 sitepackages = False
 passenv=TRAVIS_*
 
-deps = -rrequirements.txt
+deps =
+    py{2,27,py}: -rrequirements2.txt
+    py{3,34,35,36,37,py3}: -rrequirements3.txt
 
 commands =
     python -m pylint src/friendlyshell
