--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
     - name: "Python 3.7 tests"
       python: 3.7
       env: TOXENV=py37
+      # NOTE: Python 3.7 is currently not natively supported by Travis-CI so we
+      #       have to hack around it here using Ubuntu 16.04
       dist: xenial
       sudo: true
     - name: "Python pypy 2 tests"
