fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Fixes #83 Added test coverage for the new Python 3.7 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,5 @@ script:
 #        - python setup.py bdist_wheel
 #        - twine upload dist/*.whl -u $DEPLOY_USER -p $DEPLOY_PASS
 #
-#after_success:
-# - coveralls
+after_success:
+ - coveralls
