--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,15 +1,16 @@
-alabaster==0.7.11
+alabaster==0.7.12
 astroid==1.6.5
 atomicwrites==1.2.1
 attrs==18.2.0
 Babel==2.6.0
 backports.functools-lru-cache==1.5
-certifi==2018.8.24
+certifi==2018.10.15
 chardet==3.0.4
 configparser==3.5.0
 coverage==4.5.1
 docutils==0.14
 enum34==1.1.6
+filelock==3.0.10
 funcsigs==1.0.2
 futures==3.2.0
 idna==2.7
@@ -17,23 +18,23 @@ imagesize==1.1.0
 isort==4.3.4
 Jinja2==2.10
 lazy-object-proxy==1.3.1
-MarkupSafe==1.0
+MarkupSafe==1.1.0
 mccabe==0.6.1
 mock==2.0.0
 more-itertools==4.3.0
 packaging==18.0
 pathlib2==2.3.2
-pbr==4.2.0
-pluggy==0.7.1
-py==1.6.0
+pbr==5.1.1
+pluggy==0.8.0
+py==1.7.0
 Pygments==2.2.0
 pylint==1.9.3
-pyparsing==2.2.1
-pytest==3.8.1
+pyparsing==2.3.0
+pytest==3.10.0
 pytest-cov==2.6.0
 pytest-timeout==1.3.2
-pytz==2018.5
-requests==2.19.1
+pytz==2018.7
+requests==2.20.1
 scandir==1.9.0
 singledispatch==3.4.0.3
 six==1.11.0
@@ -41,9 +42,9 @@ snowballstemmer==1.2.1
 Sphinx==1.8.1
 sphinxcontrib-websupport==1.1.0
 tabulate==0.8.2
-toml==0.9.6
-tox==3.4.0
+toml==0.10.0
+tox==3.5.3
 typing==3.6.6
-urllib3==1.23
-virtualenv==16.0.0
+urllib3==1.24.1
+virtualenv==16.1.0
 wrapt==1.10.11
