updated to template spec

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,41 @@
 language: python
 
-# Generate a matrix for all Python versions we support
-matrix:
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
+  - pypy
+  - pypy3.5
+
+install:
+  - pip install tox twine wheel python-coveralls
+
+script:
+  - echo $TRAVIS_PYTHON_VERSION
+  - export PYVER=`echo $TRAVIS_PYTHON_VERSION | tr "." "\n" | head -n 1 | sed 's/^py//'`
+  - echo $PYVER
+  - tox -e py$PYVER
+
+# Deploy to test.pypi.org for branches
+# Deploy to pypi.org for tags
+# NOTE: You can not replace builds published to pypi, even if you delete one
+#       so you must make sure your versions are always unique
+jobs:
   include:
-    - name: "Python pypy 2 tests"
-      python: pypy
-      env: TOXENV=pypy
-    - name: "Python pypy 3 tests"
-      python: pypy3
-      env: TOXENV=pypy3
-    - name: "Python 2.7 tests"
-      python: 2.7
-      env: TOXENV=py27
-    - name: "Python 3.4 tests"
-      python: 3.4
-      env: TOXENV=py34
-    - name: "Python 3.5 tests"
-      python: 3.5
-      env: TOXENV=py35
-    - name: "Python 3.6 tests"
+    - stage: deploy-release
       python: 3.6
-      env: TOXENV=py36
-    - name: "Python 3.7 tests"
-      python: 3.7
-      env: TOXENV=py37
-      # NOTE: Python 3.7 is currently not natively supported by Travis-CI so we
-      #       have to hack around it here using Ubuntu 16.04
-      dist: xenial
-      sudo: true
-    - name: "Deploy to PYPI"
-      # Only enable deploys when building from tags
-      if: tag IS present
-      # As a general convention we just package and deploy from Python 3.6
-      # The version really shouldn't matter since our wheel file is version
-      # agnostic
-      python: 3.6
-      env: TOXENV=py36
-      stage: deploy
       script:
         - python setup.py bdist_wheel
         - twine upload dist/*.whl -u $DEPLOY_USER -p $DEPLOY_PASS
-
-# Install all of our build-time dependencies
-install: pip install wheel twine tox coveralls
-
-# Scripts for the default "test" stage
-# one copy of this default job will be generated for each python
-# version stated above
-script:
-  - tox
+      if: tag IS true
+    - stage: deploy-snapshot
+      python: 3.6
+      script:
+        - python setup.py bdist_wheel
+        - twine upload --repository-url https://test.pypi.org/legacy/
+            dist/*.whl -u $DEPLOY_USER -p $DEPLOY_PASS
+      if: tag IS NOT true
 
 after_success:
- - coveralls
+  - coveralls
