--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,36 @@
 [tox]
-envlist=py2,py27,pypy,py3,py34,py35,py36,py37,pypy3
+envlist = py2,py3,pypy,pypy3
+skipsdist=true
+skip_missing_interpreters=False
 
 [testenv]
-skip_missing_interpreters = True
-sitepackages = False
-passenv=TRAVIS_*
-
-deps =
-    py{2,27,py}: -rrequirements2.txt
-    py{3,34,35,36,37,py3}: -rrequirements3.txt
-
+whitelist_externals =
+    rm
+    bash
 commands =
-    python -m pylint src/friendlyshell
-    python -m pylint setup.py
-    python -m pytest -vv --cov=friendlyshell --cov-report=html \
-        --cov-report=term {posargs} tests
+    rm -rf dist
+    python setup.py bdist_wheel
+    /bin/bash -c 'pip install dist/*.whl'
+    pylint setup.py
+    bash -c "source toxenv.sh; pylint ./src/$PROJECT_NAME"
+    bash -c "source toxenv.sh; pytest ./tests -v --cov-report html --cov $PROJECT_NAME --no-cov-on-fail"
+
+[testenv:py2]
+deps = -rtests/python2.reqs
+
+[testenv:pypy]
+deps = -rtests/python2.reqs
+
+[testenv:py3]
+deps = -rtests/python3.reqs
+
+[testenv:pypy3]
+deps = -rtests/python3.reqs
+
+[testenv:py3-docs]
+deps = -rtests/python3.reqs
+whitelist_externals =
+    bash
+commands =
+    bash -c "source toxenv.sh; sphinx-apidoc -f -e -o ./docs/ src/$PROJECT_NAME"
+    python setup.py build_sphinx
